[gd_scene load_steps=15 format=3 uid="uid://bck7ip05m2ur1"]

[ext_resource type="PackedScene" uid="uid://ybitoy85gtrk" path="res://player.tscn" id="1_b4fx3"]
[ext_resource type="Script" path="res://Scripts/world.gd" id="1_q3oj8"]
[ext_resource type="PackedScene" uid="uid://bw3huntaakxk7" path="res://mushroom.tscn" id="2_73aso"]
[ext_resource type="Texture2D" uid="uid://bt2updhgs36r7" path="res://TileMaps/mainlevbuild.png" id="4_fh5t3"]
[ext_resource type="AudioStream" uid="uid://bxhc3df66purc" path="res://Music/Tales of Olden Times.wav" id="4_idtru"]
[ext_resource type="Texture2D" uid="uid://bgc7bxomg7kid" path="res://TileMaps/decorative.png" id="5_15dbg"]
[ext_resource type="Texture2D" uid="uid://c1vxk42lvjqur" path="res://TileMaps/candleA_01.png" id="5_pxyia"]
[ext_resource type="Texture2D" uid="uid://cb8h8ii03cc22" path="res://TileMaps/candleA_04.png" id="6_f2vx2"]
[ext_resource type="PackedScene" uid="uid://vq2uw3j2slcq" path="res://shooshroom.tscn" id="8_k77n6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fqvky"]
texture = ExtResource("4_fh5t3")
52:17/0 = 0
53:17/0 = 0
53:18/0 = 0
52:18/0 = 0
52:20/0 = 0
53:20/0 = 0
53:21/0 = 0
52:21/0 = 0
52:23/0 = 0
53:23/0 = 0
53:24/0 = 0
52:24/0 = 0
52:26/size_in_atlas = Vector2i(4, 4)
52:26/0 = 0
31:21/size_in_atlas = Vector2i(2, 2)
31:21/0 = 0
31:18/size_in_atlas = Vector2i(2, 2)
31:18/0 = 0
17:13/size_in_atlas = Vector2i(5, 3)
17:13/0 = 0
17:17/size_in_atlas = Vector2i(10, 3)
17:17/0 = 0
30:12/size_in_atlas = Vector2i(6, 6)
30:12/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1jesd"]
texture = ExtResource("5_15dbg")
0:6/size_in_atlas = Vector2i(3, 2)
0:6/0 = 0
0:4/size_in_atlas = Vector2i(3, 2)
0:4/0 = 0
3:4/size_in_atlas = Vector2i(2, 3)
3:4/0 = 0
5:4/size_in_atlas = Vector2i(2, 3)
5:4/0 = 0
5:7/size_in_atlas = Vector2i(2, 3)
5:7/0 = 0
0:8/size_in_atlas = Vector2i(3, 2)
0:8/0 = 0
9:8/0 = 0
9:9/0 = 0
10:8/0 = 0
10:9/0 = 0
11:9/0 = 0
11:8/0 = 0
9:11/0 = 0
9:12/0 = 0
10:12/0 = 0
10:11/0 = 0
11:11/0 = 0
11:12/0 = 0
0:12/size_in_atlas = Vector2i(3, 2)
0:12/0 = 0
0:10/size_in_atlas = Vector2i(3, 2)
0:10/0 = 0

[sub_resource type="TileSet" id="TileSet_1mm80"]
sources/0 = SubResource("TileSetAtlasSource_fqvky")
sources/1 = SubResource("TileSetAtlasSource_1jesd")

[sub_resource type="SpriteFrames" id="SpriteFrames_0hioq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_pxyia")
}, {
"duration": 1.0,
"texture": ExtResource("6_f2vx2")
}],
"loop": true,
"name": &"candle",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_me48t"]
size = Vector2(546, 35)

[node name="World" type="Node2D"]
script = ExtResource("1_q3oj8")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(144, 47)
scale = Vector2(1, 0.974973)
tile_set = SubResource("TileSet_1mm80")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(65532, 3473408, 20, 65533, 3407872, 17, 131069, 3473408, 18, 196605, 3407872, 23, 262142, 3473408, 23, 262143, 3407872, 20, 262144, 3407872, 17, 327680, 3407872, 17, 327681, 3473408, 20, 393217, 3407872, 17, 393218, 3473408, 17, 393219, 3407872, 23, 458755, 3473408, 18, 458756, 3473408, 23, 458757, 3407872, 17, 524293, 3407872, 23, 524294, 3407872, 17, 524295, 3407872, 17, 524296, 3407872, 17, 524297, 3407872, 17, 589834, 3473408, 21, 589835, 3407872, 17, 589836, 3407872, 17, 131068, 3407872, 17, 262141, 3407872, 21, 327678, 3473408, 17, 327679, 3473408, 23, 393215, 3473408, 17, 393214, 3407872, 23, 393213, 3407872, 23, 327677, 3473408, 24, 262140, 3473408, 18, 196604, 3407872, 21, 327676, 3473408, 17, 393212, 3473408, 17, 458748, 3407872, 20, 524284, 3407872, 20, 589820, 3407872, 20, 458749, 3407872, 23, 458750, 3407872, 21, 524286, 3407872, 20, 589823, 3473408, 21, 655359, 3473408, 18, 655358, 3473408, 18, 655357, 3407872, 21, 655356, 3407872, 21, 524285, 3407872, 20, 589821, 3407872, 18, 589822, 3407872, 20, 720892, 3473408, 21, 720893, 3473408, 23, 720894, 3407872, 23, 720895, 3407872, 18, 655360, 3473408, 17, 655361, 3407872, 20, 655362, 3407872, 20, 655363, 3473408, 23, 655364, 3407872, 18, 655365, 3473408, 23, 655366, 3473408, 20, 655367, 3473408, 23, 655368, 3407872, 23, 655369, 3407872, 17, 655370, 3407872, 23, 655371, 3473408, 17, 655372, 3473408, 18, 655373, 3473408, 23, 65534, 3473408, 24, 65535, 3407872, 20, 0, 3407872, 21, 1, 3407872, 17, 2, 3407872, 18, 3, 3407872, 21, 4, 3407872, 21, 5, 3473408, 18, 6, 3473408, 17, 7, 3473408, 23, 8, 3407872, 21, 9, 3407872, 24, 10, 3473408, 21, 11, 3473408, 21, 12, 3407872, 21, 13, 3407872, 18, 14, 3407872, 18, 65550, 3473408, 21, 131086, 3407872, 17, 196622, 3473408, 20, 262158, 3473408, 24, 327694, 3473408, 17, 393230, 3407872, 24, 458766, 3407872, 18, 524302, 3407872, 21, 589838, 3473408, 20, 655374, 3407872, 21, 589837, 3407872, 23, 524300, 3407872, 20, 458764, 3407872, 21, 393228, 3407872, 23, 327693, 3473408, 23, 262157, 3473408, 21, 196621, 3407872, 21, 131085, 3473408, 18, 65549, 3407872, 24, 65548, 3473408, 21, 131084, 3407872, 20, 196620, 3473408, 23, 262156, 3473408, 21, 327692, 3407872, 23, 524301, 3407872, 20, 458765, 3473408, 21, 393229, 3407872, 23, 524299, 3473408, 18, 524298, 3473408, 24, 589833, 3407872, 24, 589832, 3407872, 17, 589831, 3473408, 24, 589830, 3473408, 24, 589829, 3473408, 23, 589828, 3473408, 17, 589827, 3407872, 21, 589826, 3407872, 18, 589825, 3473408, 20, 589824, 3407872, 24, 524287, 3473408, 23, 458751, 3407872, 23, 458752, 3407872, 21, 393216, 3407872, 23, 524288, 3473408, 17, 131070, 3407872, 18, 131071, 3407872, 21, 65536, 3473408, 24, 65537, 3407872, 23, 65538, 3407872, 17, 65540, 3407872, 18, 65541, 3473408, 17, 65542, 3473408, 21, 65543, 3407872, 21, 65544, 3473408, 21, 65545, 3473408, 24, 65546, 3407872, 24, 131083, 3473408, 18, 65547, 3473408, 17, 131082, 3473408, 24, 131081, 3407872, 17, 131080, 3473408, 20, 131079, 3473408, 24, 131078, 3407872, 17, 131077, 3473408, 20, 131076, 3473408, 23, 131075, 3407872, 23, 131074, 3473408, 20, 131073, 3473408, 18, 196608, 3473408, 17, 196609, 3407872, 18, 196610, 3473408, 20, 196611, 3407872, 24, 196612, 3473408, 24, 196613, 3473408, 20, 196614, 3473408, 23, 196615, 3473408, 20, 196616, 3407872, 17, 196617, 3473408, 23, 196618, 3407872, 21, 196619, 3407872, 23, 262155, 3473408, 21, 262154, 3473408, 20, 262153, 3473408, 23, 262152, 3473408, 18, 262151, 3473408, 24, 262150, 3473408, 17, 262149, 3473408, 18, 262148, 3473408, 21, 262147, 3407872, 18, 262146, 3407872, 23, 262145, 3407872, 17, 327682, 3407872, 20, 327683, 3407872, 20, 327684, 3407872, 23, 327685, 3407872, 18, 327686, 3473408, 17, 327687, 3473408, 17, 327688, 3473408, 17, 327689, 3473408, 17, 327690, 3407872, 24, 393226, 3473408, 20, 393227, 3473408, 18, 458763, 3473408, 21, 458762, 3473408, 23, 458761, 3473408, 24, 458760, 3473408, 24, 458759, 3407872, 18, 458758, 3473408, 20, 393222, 3473408, 20, 393223, 3407872, 24, 393224, 3473408, 24, 393225, 3407872, 20, 393221, 3407872, 21, 393220, 3407872, 17, 458754, 3473408, 24, 458753, 3473408, 18, 524289, 3407872, 24, 524290, 3407872, 24, 524291, 3473408, 23, 524292, 3473408, 24, 327691, 3473408, 21, 65531, 3473408, 21, 65530, 3407872, 21, 65529, 3473408, 20, 65528, 3407872, 21, 65527, 3407872, 21, 131063, 3473408, 18, 196599, 3407872, 21, 262135, 3473408, 18, 327671, 3473408, 20, 393207, 3473408, 20, 458743, 3407872, 20, 524279, 3473408, 21, 589815, 3407872, 17, 655351, 3473408, 18, 720887, 3407872, 17, 720888, 3473408, 18, 720889, 3407872, 20, 720890, 3473408, 18, 720891, 3473408, 17, 655355, 3407872, 21, 655354, 3473408, 17, 589818, 3407872, 18, 524282, 3407872, 17, 458746, 3473408, 21, 393210, 3473408, 20, 393211, 3407872, 18, 327675, 3473408, 17, 262139, 3407872, 21, 196603, 3407872, 21, 131067, 3473408, 17, 131066, 3407872, 18, 131065, 3473408, 21, 131064, 3407872, 17, 196600, 3473408, 18, 196601, 3407872, 18, 196602, 3407872, 20, 262138, 3407872, 20, 327673, 3473408, 20, 262137, 3473408, 17, 262136, 3407872, 20, 327672, 3407872, 21, 393208, 3473408, 18, 458744, 3473408, 20, 524280, 3473408, 18, 393209, 3473408, 18, 327674, 3407872, 20, 458745, 3473408, 21, 524281, 3407872, 17, 589817, 3407872, 17, 458747, 3473408, 20, 524283, 3407872, 20, 589819, 3407872, 21, 655353, 3407872, 18, 655352, 3473408, 17, 589816, 3407872, 18, 786423, 3407872, 17, 851959, 3473408, 20, 851960, 3473408, 20, 851961, 3407872, 17, 851962, 3473408, 18, 851963, 3473408, 21, 851964, 3407872, 21, 851965, 3473408, 21, 851966, 3473408, 21, 851967, 3473408, 17, 786432, 3473408, 21, 786433, 3407872, 18, 786434, 3473408, 21, 786435, 3407872, 21, 786436, 3473408, 21, 786437, 3407872, 18, 786438, 3473408, 18, 786439, 3407872, 17, 786440, 3473408, 20, 786441, 3407872, 20, 786442, 3407872, 18, 786443, 3407872, 21, 786444, 3407872, 20, 786445, 3407872, 18, 786446, 3407872, 17, 720910, 3473408, 18, 720909, 3473408, 20, 720908, 3473408, 18, 720907, 3407872, 20, 720906, 3473408, 21, 720905, 3473408, 20, 720904, 3473408, 18, 720903, 3473408, 21, 720902, 3407872, 17, 720901, 3473408, 18, 720900, 3407872, 18, 720899, 3473408, 17, 720898, 3407872, 17, 720897, 3407872, 18, 720896, 3407872, 20, 786431, 3407872, 17, 786430, 3473408, 21, 786429, 3473408, 20, 786428, 3407872, 21, 786427, 3473408, 20, 786426, 3407872, 20, 786425, 3407872, 17, 786424, 3407872, 17, -131081, 3473408, 18, -65545, 3473408, 20, -9, 3473408, 20, -131080, 3473408, 20, -131079, 3407872, 17, -131075, 3407872, 17, -131074, 3473408, 17, -196608, 3473408, 21, -196607, 3473408, 20, -196606, 3473408, 18, -196605, 3407872, 20, -196604, 3473408, 20, -196603, 3407872, 21, -196602, 3407872, 20, -196601, 3473408, 18, -196600, 3407872, 18, -196599, 3473408, 18, -196598, 3473408, 17, -196597, 3407872, 20, -196596, 3407872, 17, -196595, 3473408, 20, -196594, 3407872, 17, -131058, 3473408, 21, -65522, 3473408, 18, -65523, 3473408, 17, -65524, 3473408, 20, -65525, 3407872, 17, -65526, 3473408, 20, -65527, 3473408, 20, -65528, 3473408, 18, -65529, 3407872, 17, -65530, 3473408, 18, -65531, 3407872, 18, -65532, 3407872, 18, -65533, 3473408, 20, -65534, 3473408, 18, -65535, 3473408, 18, -65536, 3407872, 21, -1, 3473408, 20, -2, 3473408, 20, -3, 3407872, 20, -4, 3473408, 18, -5, 3407872, 18, -6, 3473408, 21, -7, 3473408, 21, -8, 3473408, 20, -65544, 3407872, 18, -65543, 3473408, 17, -65542, 3473408, 17, -65541, 3407872, 21, -65540, 3407872, 21, -65539, 3407872, 18, -65538, 3473408, 20, -65537, 3473408, 18, -131072, 3407872, 20, -131071, 3473408, 17, -131070, 3473408, 21, -131069, 3473408, 21, -131068, 3407872, 20, -131067, 3473408, 17, -131066, 3407872, 18, -131065, 3407872, 21, -131064, 3407872, 17, -131063, 3407872, 17, -131062, 3407872, 18, -131061, 3473408, 21, -131060, 3473408, 21, -131059, 3473408, 20, -196593, 3473408, 17, -196592, 3473408, 21, -196591, 3473408, 17, -196590, 3473408, 17, -196589, 3407872, 18, -196588, 3407872, 21, -131052, 3473408, 17, -65516, 3473408, 20, 20, 3407872, 20, 65556, 3473408, 20, 131092, 3407872, 20, 196628, 3407872, 21, 262164, 3407872, 17, 327700, 3407872, 21, 327699, 3407872, 18, 786447, 3473408, 20, 786448, 3407872, 18, 786449, 3473408, 18, 786450, 3473408, 20, 786451, 3473408, 20, 786452, 3407872, 18, 720916, 3473408, 17, 655380, 3407872, 17, 589844, 3407872, 18, 524308, 3407872, 20, 458772, 3407872, 17, 393236, 3407872, 17, 393235, 3473408, 17, 393234, 3473408, 21, 393233, 3473408, 17, 393232, 3407872, 20, 393231, 3407872, 17, 458770, 3473408, 17, 458769, 3473408, 17, 458768, 3473408, 18, 458767, 3473408, 18, 524303, 3473408, 21, 655375, 3407872, 17, 589839, 3407872, 20, 720911, 3407872, 21, 720912, 3407872, 17, 720913, 3407872, 20, 720914, 3407872, 17, 720915, 3473408, 21, 655379, 3473408, 18, 589843, 3473408, 20, 524307, 3473408, 20, 458771, 3407872, 17, 524306, 3473408, 18, 589842, 3407872, 18, 655378, 3407872, 18, 655377, 3407872, 20, 589841, 3407872, 20, 524305, 3473408, 20, 524304, 3473408, 21, 589840, 3473408, 17, 655376, 3473408, 17, 327698, 3407872, 18, 327697, 3473408, 20, 327696, 3473408, 18, 262159, 3473408, 21, 196623, 3473408, 20, 131087, 3407872, 18, 65551, 3407872, 20, 15, 3407872, 18, -65521, 3407872, 17, -131057, 3407872, 18, -131056, 3473408, 21, -131055, 3407872, 18, -131054, 3407872, 20, -131053, 3473408, 18, -65517, 3407872, 18, 19, 3473408, 20, 65555, 3473408, 21, 131091, 3473408, 21, 196627, 3473408, 20, 262163, 3407872, 20, 327695, 3473408, 18, 262160, 3407872, 21, 262161, 3473408, 20, 262162, 3473408, 20, 131090, 3473408, 17, 196626, 3407872, 21, 65554, 3473408, 21, 18, 3407872, 20, -65518, 3407872, 21, -65519, 3473408, 21, -65520, 3473408, 18, 16, 3407872, 17, 65552, 3407872, 18, 131088, 3407872, 20, 196624, 3407872, 17, 196625, 3473408, 18, 131089, 3473408, 20, 65553, 3407872, 21, 17, 3473408, 21, 131072, 3473408, 21, 196607, 3473408, 18, 196606, 3407872, 17, -131073, 3407872, 18, 65539, 3407872, 23, -131077, 3473408, 17, -131078, 3473408, 18, -131076, 3407872, 17)
layer_1/name = "Ground1"
layer_1/tile_data = PackedInt32Array(262143, 3407872, 26, 589822, 2031616, 18, 524289, 2031616, 21, 524292, 2031616, 21, 524295, 2031616, 18, 524298, 2031616, 18, 196616, 1966080, 12)
layer_2/name = "Wall"
layer_2/tile_data = PackedInt32Array(-65541, 1114112, 17, -131070, 1114112, 13, -131063, 1114112, 17, -131053, 1114112, 17)

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 1
position = Vector2(138, 93)
zoom = Vector2(4, 4)
limit_left = 1
limit_top = 1
limit_right = 480
limit_bottom = 250
limit_smoothed = true
editor_draw_limits = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_idtru")
autoplay = true

[node name="candle1" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(152, 71)
sprite_frames = SubResource("SpriteFrames_0hioq")
animation = &"candle"
frame_progress = 0.210979

[node name="candle2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(123, 118)
sprite_frames = SubResource("SpriteFrames_0hioq")
animation = &"candle"
frame_progress = 0.738344

[node name="candle3" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(156, 117)
sprite_frames = SubResource("SpriteFrames_0hioq")
animation = &"candle"
frame_progress = 0.738344

[node name="candle4" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(110, 95)
sprite_frames = SubResource("SpriteFrames_0hioq")
animation = &"candle"
frame_progress = 0.738344

[node name="candle5" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(164, 91)
sprite_frames = SubResource("SpriteFrames_0hioq")
animation = &"candle"
frame_progress = 0.738344

[node name="candle6" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(122, 68)
sprite_frames = SubResource("SpriteFrames_0hioq")
animation = &"candle"
frame_progress = 0.738344

[node name="mushroom" parent="." instance=ExtResource("2_73aso")]
position = Vector2(432, 202)

[node name="mushroom2" parent="." instance=ExtResource("2_73aso")]
position = Vector2(439, 52)

[node name="shooshroom" parent="." instance=ExtResource("8_k77n6")]
position = Vector2(307, 129)

[node name="player" parent="." instance=ExtResource("1_b4fx3")]
position = Vector2(138, 93)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="player"]
remote_path = NodePath("../../Camera2D")

[node name="wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2(263, 7.5)
shape = SubResource("RectangleShape2D_me48t")
